<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mike0.w2d5_quiz1.MainActivity">

    <TextView
        android:text="W2D5 TEST 1 - HOME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_title"
        android:hint="@string/lbl_hint_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_save"
        android:text="@string/lbl_btn_save_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_read"
        android:text="@string/lbl_btn_read_all_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_update"
        android:text="@string/lbl_btn_update_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_delete"
        android:text="@string/lbl_btn_delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
